Add appointmentList to storage